--- a/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.html
@@ -9,6 +9,8 @@
         <th>Bezeichnung</th>
         <th>Gruppe</th>
         <th>GanzerTag</th>
+        <th>Dauer unbestimmt</th>
+        <th>ShowZeiten</th>
         <th>Beginn</th>
         <th>Ende</th>
         <th></th>
@@ -24,10 +26,12 @@
         <td>{{aktivitaet.Bezeichnung}}</td>
         <td>{{aktivitaet.GruppeCode}}</td>
         <td style="text-align:center;"><input type="checkbox"  [checked]="aktivitaet.GanzerTag" onclick="return false;"/></td>
-        <td *ngIf="aktivitaet.GanzerTag"></td>
-        <td *ngIf="aktivitaet.GanzerTag"></td>
-        <td *ngIf="!aktivitaet.GanzerTag">{{aktivitaet.ZeitBeginn | date: 'HH:mm'}}</td>
-        <td *ngIf="!aktivitaet.GanzerTag">{{aktivitaet.ZeitEnde | date: 'HH:mm'}}</td>
+        <td style="text-align:center;"><input type="checkbox"  [checked]="aktivitaet.ZeitUnbestimmt" onclick="return false;"/></td>
+        <td style="text-align:center;"><input type="checkbox"  [checked]="aktivitaet.ShowZeiten" onclick="return false;"/></td>
+        <td *ngIf="aktivitaet.ShowZeiten">{{aktivitaet.ZeitBeginn | date: 'HH:mm'}}</td>
+        <td *ngIf="aktivitaet.ShowZeiten">{{aktivitaet.ZeitEnde | date: 'HH:mm'}}</td>
+        <td *ngIf="!aktivitaet.ShowZeiten"></td>
+        <td *ngIf="!aktivitaet.ShowZeiten"></td>
         <td>
           <p class="square" [style.background-color]=[aktivitaet.Farbe]></p>
         </td>
