20181221: v.a. Codebereinigungen 20181216: Terminwiederholungen nun auch über eine Zeitspanne von mehreren Tagen und löschen mehrere verbundenere Termine -> (IdTermin) 20181215: Termin mit Speicherung von Wiederholungen 20181214: mit Flag Ganztägig bei Codes Aktivitäten und Termin 20181214: Termin-Edit mit Anzeige "Wiederholungen"

--- a/Template_Angular7/ClientApp/src/app/components/termin/termin-edit.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/termin/termin-edit.component.html
@@ -150,7 +150,7 @@
               [disabled]="form.invalid"
               class="btn btn-sm btn-success">
         <i class="fas fa-plus-circle"></i>
-        Aktivität erstellen
+        Termin erstellen
       </button>
 
       <button type="submit"
@@ -160,6 +160,8 @@
         Zurück
       </button>
     </div>
+
+
     <div class="form-group commands">
       <button id="btnShowDataJson " type="button" (click)="onShowDataJson()"
               class={{showDataJsonBtnClass}} >
@@ -179,6 +181,26 @@
     <pre class="code-preview">{{selTeilnehmer | json}}</pre>
     <a>Auswahl: Aktivitäten</a>
     <pre class="code-preview">{{selAktivitaeten | json}}</pre>
+  </div>
+</div>
+
+<div class="panel panel-info"
+     style="margin-top: 20px;">
+  <div class="panel-heading">Form debug info</div>
+  <div class="panel-body">
+    <p><strong>Form value:</strong></p>
+    <div class="help-block">
+      {{ form.value | json }}
+    </div>
+    <p><strong>Form status:</strong></p>
+    <div class="help-block">
+      {{ form.status | json }}
+    </div>
+    <p><strong>Form activity log:</strong></p>
+    <div class="help-block">
+            <span *ngIf="activityLog"
+                  [innerHTML]="activityLog"></span>
+    </div>
   </div>
 </div>
 
