20181221: v.a. Codebereinigungen 20181216: Terminwiederholungen nun auch über eine Zeitspanne von mehreren Tagen und löschen mehrere verbundenere Termine -> (IdTermin) 20181215: Termin mit Speicherung von Wiederholungen 20181214: mit Flag Ganztägig bei Codes Aktivitäten und Termin 20181214: Termin-Edit mit Anzeige "Wiederholungen"

--- a/Template_Angular7/ClientApp/src/app/components/teilnehmer/teilnehmer-edit.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/teilnehmer/teilnehmer-edit.component.html
@@ -1,4 +1,4 @@
-<div class="teilnehmer-edit">
+<div class="teilnehmer-edit edit_form">
   <h2>{{title}}</h2>
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="form-group row">
