--- a/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-edit.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-edit.component.html
@@ -1,6 +1,6 @@
-<div class="code_aktivitaeten-edit">
-  <h2>{{title}}</h2>
+<div class="code_aktivitaeten-edit edit_form">
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <h2>{{title}}</h2>
     <div class="form-group row">
       <label for="code" class="col-sm-2 col-form-label">Kurzbezeichnung:</label>
       <div class="col-sm-3">
