--- a/Template_Angular7/ClientApp/src/app/components/termin/termin-edit.component.scss
+++ b/Template_Angular7/ClientApp/src/app/components/termin/termin-edit.component.scss
@@ -4,12 +4,8 @@
 }
 
 .chkganztaegig {
-  //border-bottom: 1px solid #8ec4e5;
-  //border-top: 1px solid #8ec4e5;
-  margin-bottom: 8px;
-  margin-left: 20px;
-  padding-bottom: 5px;
-  padding-left: 5px;
+  padding-left: 20px;
+  margin-top: 10px;
 }
 
 .tabwiederholungen {
@@ -42,3 +38,17 @@
   padding-top: 20px;
   padding-left: 15px;
 }
+
+.mytextbox
+{
+  margin-left: 30px;
+  width: 110px;
+}
+
+.help-block {
+  display: block;
+  margin-top: -15px;
+  margin-bottom: 10px;
+  color: #1626f0;
+}
+
