--- a/Template_Angular7/ClientApp/src/styles.scss
+++ b/Template_Angular7/ClientApp/src/styles.scss
@@ -5,3 +5,4 @@
 @import "../node_modules/ngx-bootstrap/datepicker/bs-datepicker.scss";
 @import "../node_modules/angular-calendar/css/angular-calendar.css";
 @import "../node_modules/flatpickr/dist/flatpickr.min.css";
+@import "./app/components/scss/form.css";
