--- a/Template_Angular7/ClientApp/src/app/app.component.css
+++ b/Template_Angular7/ClientApp/src/app/app.component.css
@@ -1,6 +1,16 @@
-@media (max-width: 767px) {
-  /* On small screens, the nav menu spans the full width of the screen. Leave a space for it. */
+/*@media (max-width: 767px) {
+  !* On small screens, the nav menu spans the full width of the screen. Leave a space for it. *!
   .body-content {
-    padding-top: 50px; } }
+    padding-top: 50px;
+  }
+}*/
+.container-fluid {
+  padding-right: 10px;
+  padding-left: 10px; }
+
+@media (min-width: 576px) {
+  .container-fluid {
+    padding-right: 10px;
+    padding-left: 10px; } }
 
 /*# sourceMappingURL=app.component.css.map */
