--- a/Template_Angular7/ClientApp/src/app/app.component.scss
+++ b/Template_Angular7/ClientApp/src/app/app.component.scss
@@ -1,6 +1,18 @@
-@media (max-width: 767px) {
-  /* On small screens, the nav menu spans the full width of the screen. Leave a space for it. */
+/*@media (max-width: 767px) {
+  !* On small screens, the nav menu spans the full width of the screen. Leave a space for it. *!
   .body-content {
     padding-top: 50px;
+  }
+}*/
+
+.container-fluid {
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+@media (min-width: 576px) {
+  .container-fluid {
+    padding-right: 10px;
+    padding-left: 10px;
   }
 }
