--- a/Template_Angular7/ClientApp/src/app/components/scss/form.css
+++ b/Template_Angular7/ClientApp/src/app/components/scss/form.css
@@ -1,50 +1,82 @@
+* {
+  Abox-sizing: border-box; }
+
+[class*="col-"] {
+  float: left; }
+
+.col-1 {
+  width: 8.33%; }
+
+.col-2 {
+  width: 16.66%; }
+
+.col-3 {
+  width: 25%; }
+
+.col-4 {
+  width: 33.33%; }
+
+.col-5 {
+  width: 41.66%; }
+
+.col-6 {
+  width: 50%; }
+
+.col-7 {
+  width: 58.33%; }
+
+.col-8 {
+  width: 66.66%; }
+
+.col-9 {
+  width: 75%; }
+
+.col-10 {
+  width: 83.33%; }
+
+.col-11 {
+  width: 91.66%; }
+
+.col-12 {
+  width: 100%; }
+
 .edit_form {
-  background: -webkit-linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
-  background: -moz-linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
-  background: linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
-  margin: auto;
   position: relative;
   font-family: Tahoma, Geneva, sans-serif;
   font-size: 14px;
   font-style: normal;
-  line-height: 14px;
-  font-weight: bold;
-  color: rgba(82, 174, 240, 0.99);
-  text-decoration: none;
-  border-radius: 8px;
-  padding: 0px;
-  border: 1px solid #999;
-  border: inset 1px solid #333;
-  -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3); }
+  font-weight: bold; }
+  .edit_form .form-control {
+    font-size: 14px; }
   .edit_form .title {
-    color: rgba(22, 38, 240, 0.99);
+    color: rgba(240, 80, 19, 0.99);
     text-align: center;
     font-family: Tahoma, Geneva, sans-serif;
-    font-size: 20px;
-    padding: 10px;
-    border-width: 5px;
-    border-color: rgba(82, 174, 240, 0.99);
-    border-top-right-radius: 8px;
-    border-top-left-radius: 8px;
     background-color: rgba(82, 174, 240, 0.43);
     margin-bottom: 15px; }
+  .edit_form .debug-info-button-full-width {
+    width: 100%; }
   .edit_form label {
-    color: black;
-    margin-left: 20px;
-    font-size: 16px;
+    color: blue;
+    margin-left: 0px;
+    font-size: 14px;
     font-family: Arial, serif;
-    font-style: normal; }
+    font-style: normal;
+    float: left; }
+
+.main-nav {
+  display: none; }
 
 .navbar {
-  overflow: hidden;
+  /*overflow: hidden;
   background-color: rgba(29, 61, 84, 0.1);
+
   bottom: 0;
   width: 100%;
   height: 38px;
-  border-bottom-left-radius: 8px;
-  border-bottom-right-radius: 8px; }
+
+  border-bottom-left-radius: $radius;
+  border-bottom-right-radius: $radius;*/ }
 
 .form-debug-info {
   background-color: rgba(240, 225, 4, 0.13);
@@ -56,32 +88,168 @@
   font-style: normal;
   line-height: 14px;
   font-weight: bold;
-  color: rgba(22, 38, 240, 0.99);
+  color: rgba(43, 43, 43, 0.99);
   text-decoration: none;
-  border-radius: 8px;
-  padding: 10px;
-  border: 1px solid #999;
-  border: inset 1px solid #333;
-  -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3); }
+  .form-debug-info .innerbody {
+    padding: 0px 15px 15px 15px; }
   .form-debug-info .title {
-    color: rgba(22, 38, 240, 0.99);
+    color: rgba(5, 162, 15, 0.99);
     text-align: center;
     font-family: Tahoma, Geneva, sans-serif;
     font-size: 16px;
     padding: 10px;
     border-width: 5px;
     border-color: rgba(240, 202, 79, 0.99);
-    border-top-right-radius: 8px;
-    border-top-left-radius: 8px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
     background-color: rgba(240, 155, 44, 0.2);
     margin-bottom: 15px; }
-  .form-debug-info label {
+  .form-debug-info .help-block {
+    display: block;
+    margin-top: -15px;
+    margin-bottom: 10px;
+    font-size: 12px;
+    font-style: normal;
+    color: #a4a4a4; }
+  .form-debug-info .label {
     color: black;
     margin-left: 20px;
     font-size: 16px;
     font-family: Arial, serif;
     font-style: normal; }
+
+@media (min-width: 576px) {
+  * {
+    box-sizing: border-box; }
+
+  [class*="col-"] {
+    float: left; }
+
+  .col-1 {
+    width: 8.33%; }
+
+  .col-2 {
+    width: 16.66%; }
+
+  .col-3 {
+    width: 25%; }
+
+  .col-4 {
+    width: 33.33%; }
+
+  .col-5 {
+    width: 41.66%; }
+
+  .col-6 {
+    width: 50%; }
+
+  .col-7 {
+    width: 58.33%; }
+
+  .col-8 {
+    width: 66.66%; }
+
+  .col-9 {
+    width: 75%; }
+
+  .col-10 {
+    width: 83.33%; }
+
+  .col-11 {
+    width: 91.66%; }
+
+  .col-12 {
+    width: 100%; }
+
+  .main-nav {
+    display: block; }
+
+  .edit_form {
+    background: -webkit-linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
+    background: -moz-linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
+    background: linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
+    position: relative;
+    font-family: Tahoma, Geneva, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    line-height: 14px;
+    font-weight: bold;
+    color: rgba(82, 174, 240, 0.99);
+    text-decoration: none;
+    border-radius: 5px;
+    padding: 0px;
+    border: 1px solid rgba(153, 153, 153, 0.51);
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3); }
+    .edit_form .title {
+      color: rgba(22, 38, 240, 0.99);
+      text-align: center;
+      font-family: Tahoma, Geneva, sans-serif;
+      font-size: 20px;
+      padding: 10px;
+      border-width: 5px;
+      border-color: rgba(82, 174, 240, 0.99);
+      border-top-right-radius: 5px;
+      border-top-left-radius: 5px;
+      background-color: rgba(82, 174, 240, 0.43);
+      margin-bottom: 15px; }
+    .edit_form label {
+      color: black;
+      margin-left: 20px;
+      font-size: 16px;
+      font-family: Arial, serif;
+      font-style: normal; }
+
+  .navbar {
+    overflow: hidden;
+    background-color: rgba(29, 61, 84, 0.1);
+    bottom: 0;
+    width: 100%;
+    height: 38px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px; }
+
+  .form-debug-info {
+    background-color: rgba(240, 225, 4, 0.13);
+    margin-top: 10px;
+    margin-bottom: 10px;
+    position: relative;
+    font-family: Tahoma, Geneva, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    line-height: 14px;
+    font-weight: bold;
+    color: rgba(43, 43, 43, 0.99);
+    text-decoration: none;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3); }
+    .form-debug-info .innerbody {
+      padding: 0px 15px 15px 15px; }
+    .form-debug-info .title {
+      color: rgba(5, 162, 15, 0.99);
+      text-align: center;
+      font-family: Tahoma, Geneva, sans-serif;
+      font-size: 16px;
+      padding: 10px;
+      border-width: 5px;
+      border-color: rgba(240, 202, 79, 0.99);
+      border-top-right-radius: 5px;
+      border-top-left-radius: 5px;
+      background-color: rgba(240, 155, 44, 0.2);
+      margin-bottom: 15px; }
+    .form-debug-info .help-block {
+      display: block;
+      margin-top: -15px;
+      margin-bottom: 10px;
+      font-size: 12px;
+      font-style: normal;
+      color: #a4a4a4; }
+    .form-debug-info .label {
+      color: black;
+      margin-left: 20px;
+      font-size: 16px;
+      font-family: Arial, serif;
+      font-style: normal; } }
 
 /*# sourceMappingURL=form.css.map */
